--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -70,7 +70,7 @@
     "Tk": "Образует блоки. Может ходить на 2 клетки. Переносит Торпеды. 96 е.с.",
     "Tp": "Не образует блоки. Может переносить и запускать любые фишки. Уничтожается любым кораблем.",
     "Tr": "Может снимать мины, торпеды и брандеры (атакуя их). Образует блоки. 64 е.с.",
-    "Unknown": "Корабль противника",
+    "Unknown": "",
     "Sinking": "Атакуйте его любым кораблем, чтобы забрать себе. Ход перейдет к противнику."
   },
   "actions": {
@@ -82,7 +82,7 @@
     "skip": "Пропустить"
   },
   "pwa": {
-    "installTitle": "Установить Phystech Seabattle",
+    "installTitle": "Установить приложение",
     "installDescription": "Добавьте игру на главный экран для лучшего игрового опыта в полноэкранном режиме",
     "install": "Установить",
     "later": "Позже",
@@ -116,8 +116,8 @@
     "enterCustomText": "Введите текст...",
     "none": "Нет",
     "readyToBattle": "✅ Готов к бою",
-    "confirmReady": "🎯 Подтвердить готовность?",
-    "copyInviteLink": "🔗 Скопировать ссылку",
+    "confirmReady": "🎯 Точно готов?",
+    "copyInviteLink": "🔗 Копировать ссылку",
     "linkCopied": "✅ Ссылка скопирована!",
     "skipTurn": "⏭ Пропустить ход",
     "emptySquare": "Пустая клетка"
@@ -132,17 +132,17 @@
     "madeAreaShotFeminine": "произвела площадной выстрел",
     "shipAttacked": "атаковал",
     "shipAttackedFeminine": "атаковала",
-    "wasDestroyed": "был уничтожен",
-    "wasDestroyedFeminine": "была уничтожена",
+    "wasDestroyed": "уничтожен",
+    "wasDestroyedFeminine": "уничтожена",
     "exploded": "взорвался",
     "explodedFeminine": "взорвалась",
-    "blockDeclaredPrefix": "Объявлен блок:",
+    "blockDeclaredPrefix": "блок объявлен:",
     "unknownEvent": "неизвестное событие",
     "noEventsYet": "Событий пока нет...",
-    "yourMasculine": "ваш",
-    "yourFeminine": "ваша",
-    "opponentsMasculine": "вражеский",
-    "opponentsFeminine": "вражеская"
+    "yourMasculine": "Ваш",
+    "yourFeminine": "Ваша",
+    "opponentsMasculine": "Вражеский",
+    "opponentsFeminine": "Вражеская"
   },
   "shipGenders": {
     "AB": "feminine",
