--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -1,7 +1,7 @@
 {
   "game": {
-    "title": "Морской бой по-физтеховски",
-    "description": "Морской бой по-физтеховски - стратегическая морская битва с уникальными правилами. Игра проходит на поле 14×14 клеток с 19 типами кораблей, каждый из которых обладает особыми способностями, а противник не знает какой из ваших кораблей какого типа.",
+    "title": "Морской бой по&#8209;физтеховски",
+    "description": "Морской бой по&#8209;физтеховски - стратегическая морская битва с уникальными правилами. Игра проходит на поле 14×14 клеток с 19 типами кораблей, каждый из которых обладает особыми способностями, а противник не знает какой из ваших кораблей какого типа.",
     "loading": "Загрузка игры...",
     "startRegular": "Обычная игра",
     "startMini": "Мини-игра",
@@ -120,7 +120,13 @@
     "copyInviteLink": "🔗 Копировать ссылку",
     "linkCopied": "✅ Ссылка скопирована!",
     "skipTurn": "⏭ Пропустить ход",
-    "emptySquare": "Пустая клетка"
+    "emptySquare": "Пустая клетка",
+    "cancel": "Отмена",
+    "apply": "Применить",
+    "ships": "Корабли",
+    "you": "Вы",
+    "enemy": "Противник",
+    "difference": "Разн"
   },
   "log": {
     "ship": "корабль",
