--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -132,16 +132,16 @@
     "ship": "корабль",
     "shipMoved": "переместился",
     "shipMovedFeminine": "переместилась",
-    "madeShot": "произвел выстрел",
-    "madeShotFeminine": "произвела выстрел",
-    "madeAreaShot": "произвел площадной выстрел",
-    "madeAreaShotFeminine": "произвела площадной выстрел",
-    "shipAttacked": "атаковал",
-    "shipAttackedFeminine": "атаковала",
-    "wasDestroyed": "уничтожен",
-    "wasDestroyedFeminine": "уничтожена",
-    "exploded": "взорвался",
-    "explodedFeminine": "взорвалась",
+    "madeShot": "произвел выстрел 🎯",
+    "madeShotFeminine": "произвела выстрел 🎯",
+    "madeAreaShot": "произвел площадной выстрел 🚀",
+    "madeAreaShotFeminine": "произвела площадной выстрел 🚀",
+    "shipAttacked": "атаковал 🗡️",
+    "shipAttackedFeminine": "атаковала 🗡️",
+    "wasDestroyed": "уничтожен 💥",
+    "wasDestroyedFeminine": "уничтожена 💥",
+    "exploded": "взорвался 💣",
+    "explodedFeminine": "взорвалась 💣",
     "blockDeclaredPrefix": "блок объявлен:",
     "unknownEvent": "неизвестное событие",
     "noEventsYet": "Событий пока нет...",
