improve log responsiveness

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -133,11 +133,11 @@
     "opponents": "Opponent's",
     "ship": "ship",
     "shipMoved": "moved",
-    "madeShot": "made a shot 🎯",
-    "madeAreaShot": "made an area shot 🚀",
-    "shipAttacked": "attacked 🗡️",
-    "wasDestroyed": "was destroyed 💥",
-    "exploded": "exploded 💣",
+    "madeShot": "made a shot\u00A0🎯",
+    "madeAreaShot": "made an area shot\u00A0🚀",
+    "shipAttacked": "attacked\u00A0🗡️",
+    "wasDestroyed": "was destroyed\u00A0💥",
+    "exploded": "exploded\u00A0💣",
     "blockDeclaredPrefix": "block declared:",
     "unknownEvent": "unknown event",
     "noEventsYet": "No events yet..."
