--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -132,16 +132,16 @@
     "ship": "корабль",
     "shipMoved": "переместился",
     "shipMovedFeminine": "переместилась",
-    "madeShot": "произвел выстрел 🎯",
-    "madeShotFeminine": "произвела выстрел 🎯",
-    "madeAreaShot": "произвел площадной выстрел 🚀",
-    "madeAreaShotFeminine": "произвела площадной выстрел 🚀",
-    "shipAttacked": "атаковал 🗡️",
-    "shipAttackedFeminine": "атаковала 🗡️",
-    "wasDestroyed": "уничтожен 💥",
-    "wasDestroyedFeminine": "уничтожена 💥",
-    "exploded": "взорвался 💣",
-    "explodedFeminine": "взорвалась 💣",
+    "madeShot": "произвел выстрел\u00A0🎯",
+    "madeShotFeminine": "произвела выстрел\u00A0🎯",
+    "madeAreaShot": "произвел площадной выстрел\u00A0🚀",
+    "madeAreaShotFeminine": "произвела площадной выстрел\u00A0🚀",
+    "shipAttacked": "атаковал\u00A0🗡️",
+    "shipAttackedFeminine": "атаковала\u00A0🗡️",
+    "wasDestroyed": "уничтожен\u00A0💥",
+    "wasDestroyedFeminine": "уничтожена\u00A0💥",
+    "exploded": "взорвался\u00A0💣",
+    "explodedFeminine": "взорвалась\u00A0💣",
     "blockDeclaredPrefix": "блок объявлен:",
     "unknownEvent": "неизвестное событие",
     "noEventsYet": "Событий пока нет...",
