fix tooltip translations

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -41,8 +41,8 @@
     "Pl": "Submarine",
     "Rd": "Raider",
     "Rk": "Rocket",
-    "Sm": "Airplane",
-    "St": "Guard",
+    "Sm": "Aircraft",
+    "St": "Patrol Boat",
     "T": "Torpedo",
     "Tk": "Torpedo Boat",
     "Tp": "Transport",
@@ -51,24 +51,24 @@
     "Sinking": "Neutral Ship"
   },
   "shipDescriptions": {
-    "AB": "Click during attack phase to explode - destroy all ships in a 5×5 square. If attacked - explodes.",
-    "Av": "Forms blocks. Can carry Airplane. 729 u.p.",
-    "Br": "Can shoot at adjacent enemy ship (not diagonally) and capture it. Capture is only possible once in a row. When attacked explodes like a Mine.",
-    "Es": "Forms blocks. Can carry mines. 216 u.p.",
-    "F": "Absolutely immobile. If the opponent captured all your Forts - you lose. Torpedo, Airplane and Rocket shots don't harm Forts.",
+    "AB": "Can Explode - destroy all ships in a 5×5 square. If attacked - explodes.",
+    "Av": "Forms blocks. Can carry Aircrafts. 729 u.p.",
+    "Br": "Can shoot at adjacent enemy ship (not diagonally) and capture it. If you captured a ship, you get addional move but can't capture again immediately. When attacked explodes like a Mine.",
+    "Es": "Forms blocks. Can carry Mines. 216 u.p.",
+    "F": "Absolutely immobile. If the opponent captures all your Forts - you lose. Torpedo, Aircraft and Rocket shots don't harm Forts.",
     "Kr": "Forms blocks. 324 u.p.",
     "KrPl": "Defeats everyone except Cruiser, Raider and Destroyer. Doesn't form or consider blocks.",
     "Lk": "Forms blocks. 486 u.p.",
-    "Mn": "Moves only next to destroyer. Doesn't attack. When attacked is destroyed along with the attacking ship. Destroyed by Minesweeper.",
-    "NB": "Click during attack phase to explode - make all ships in a 5×5 square neutral. If attacked - explodes.",
-    "Pl": "Defeats Battleship. Doesn't form or consider blocks.",
-    "Rd": "Forms blocks. Can pretend to be any weaker ship in blocks. Rd+St standing next to each other can be considered 2 Destroyers in a block of 2‑3 ships. 288 u.p.",
-    "Rk": "Moves only next to Cruiser Submarine. Can shoot in a straight line over ships in two ways: 1) no more than 2 cells and destroy all ships in a 3×3 square (with S key) 2) no more than 3 cells and destroy 1 ship (with R key). Doesn't harm Forts. Destroyed when shooting.",
-    "Sm": "Can shoot (if Aircraft Carrier is nearby) in a straight line over ships at any distance. Destroys any ship except Fort. Destroyed when shooting.",
+    "Mn": "Moves only next to a Destroyer. Doesn't attack. When attacked it is destroyed along with the attacking ship. Destroyed by Minesweeper.",
+    "NB": "Can Explode - make all ships in a 5×5 square neutral. If attacked - explodes.",
+    "Pl": "Defeats Battleships. Doesn't form or consider blocks.",
+    "Rd": "Forms blocks. Can pretend to be any weaker ship in blocks. A Raider and a Patrol boat standing next to each other can be considered 2 Destroyers in a block (and another Raider or an actual Destroyer can be added to make it 3xDestroyers). 288 u.p.",
+    "Rk": "Moves only next to a Cruiser Submarine. Can shoot in a straight line over ships in two ways: 1) no more than 2 cells and destroy all ships in a 3×3 square (with R key) 2) no more than 3 cells and destroy 1 ship (with S key). Doesn't harm Forts. Destroyed when shooting.",
+    "Sm": "Can shoot (if near an Aircraft Carrier) in a straight line over ships at any distance. Destroys any ship except Fort. Destroyed when shooting.",
     "St": "Forms blocks. 144 u.p.",
-    "T": "Moves only next to Torpedo Boat. Can move 2 cells. Can shoot in a straight line no more than 4 cells. Can't shoot through ships. Doesn't harm Forts.",
+    "T": "Moves only next to a Torpedo Boat. Can move 2 cells. Can shoot in a straight line no more than 4 cells. Can't shoot through ships. Doesn't harm Forts.",
     "Tk": "Forms blocks. Can move 2 cells. Carries Torpedoes. 96 u.p.",
-    "Tp": "Doesn't form blocks. Can carry and launch any pieces. Destroyed by any ship.",
+    "Tp": "Doesn't form blocks. Can carry and launch any pieces. Destroyed by any other attacking ship.",
     "Tr": "Can remove mines, torpedoes and fire ships (by attacking them). Forms blocks. 64 u.p.",
     "Unknown": "",
     "Sinking": "Attack it with any ship to capture it. Turn will pass to opponent."
