--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -51,24 +51,24 @@
     "Sinking": "Ничейный корабль"
   },
   "shipDescriptions": {
-    "AB": "Щелкнув в фазу атаки можно взорвать - уничтожить все корабли в квадрате 5×5 клеток. Если ее атакуют - взрывается.",
+    "AB": "Мможно Взорвать - уничтожить все корабли в квадрате 5×5 клеток. Если ее атакуют - взрывается.",
     "Av": "Образует блоки. Может нести Самолет. 729 е.с.",
-    "Br": "Можно выстрелить в соседний корабль противника (не по диагонали) и захватить его. Захват возможен только один раз подряд. При атаке взрывается как Мина.",
+    "Br": "Можно выстрелить в соседний корабль противника (не по диагонали) и захватить его. Захватывать можно только один раз подряд. При атаке взрывается как Мина.",
     "Es": "Образует блоки. Может нести мины. 216 е.с.",
     "F": "Абсолютно неподвижен. Если противник захватил все ваши Форты - вы проиграли. Выстрелы Торпед, Самолетов и Ракет не наносят вреда Фортам.",
     "Kr": "Образует блоки. 324 е.с.",
     "KrPl": "Побеждает всех, кроме Крейсера, Рейдера и Эсминца. Не образует и не учитывает блоки.",
     "Lk": "Образует блоки. 486 е.с.",
     "Mn": "Ходит только рядом с эсминцем. Не атакует. При атаке уничтожается вместе с атаковавшим кораблем. Уничтожается Тральщиком.",
-    "NB": "Щелкнув в фазу атаки можно взорвать - сделать все корабли в квадрате 5×5 клеток ничейными. Если ее атакуют - взрывается.",
+    "NB": "Можно Взорвать - сделать все корабли в квадрате 5×5 клеток ничейными. Если ее атакуют - взрывается.",
     "Pl": "Побеждает Линкор. Не образует и не учитывает блоки.",
-    "Rd": "Образует блоки. Может представляться любым более слабым кораблем в блоках. Рд+Ст, стоящие рядом, могут считаться 2 Эсминцами в блоке из 2‑3 кораблей. 288 е.с.",
-    "Rk": "Ходит только рядом с Крейсерской подводной лодкой. Можно выстрелить по прямой над кораблями двумя способами: 1) не более чем на 2 клетки и уничтожить все корабли в квадрате 3×3 клетки (с клавишей S) 2) не более чем на 3 клетки и уничтожить 1 корабль (с клавишей R). Не наносит вреда Фортам. Уничтожается при выстреле.",
+    "Rd": "Образует блоки. Может представляться любым более слабым кораблем в блоках. Рейдер и Сторож, стоящие рядом, могут считаться 2 Эсминцами в блоке. Если добавить еще один Рейдер или настоящий Эсминец, то можно заявить 3 Эсминца. 288 е.с.",
+    "Rk": "Ходит только рядом с Крейсерской подводной лодкой. Можно выстрелить по прямой над кораблями двумя способами: 1) не более чем на 2 клетки и уничтожить все корабли в квадрате 3×3 клетки (с клавишей R) 2) не более чем на 3 клетки и уничтожить 1 корабль (с клавишей S). Не наносит вреда Фортам. Уничтожается при выстреле.",
     "Sm": "Можно выстрелить (если рядом Авианосец) по прямой над кораблями на любое расстояние. Уничтожает любой корабль, кроме Форта. Уничтожается при выстреле.",
     "St": "Образует блоки. 144 е.с.",
     "T": "Ходит только рядом с Торпедным катером. Может ходить на 2 клетки. Можно выстрелить по прямой не более чем на 4 клетки. Не может стрелять сквозь корабли. Не наносит вреда Фортам.",
     "Tk": "Образует блоки. Может ходить на 2 клетки. Переносит Торпеды. 96 е.с.",
-    "Tp": "Не образует блоки. Может переносить и запускать любые фишки. Уничтожается любым кораблем.",
+    "Tp": "Не образует блоки. Может переносить и запускать любые фишки. Уничтожается любым другим атакующим кораблем.",
     "Tr": "Может снимать мины, торпеды и брандеры (атакуя их). Образует блоки. 64 е.с.",
     "Unknown": "",
     "Sinking": "Атакуйте его любым кораблем, чтобы забрать себе. Ход перейдет к противнику."
