--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -86,7 +86,7 @@
     "installDescription": "Добавьте игру на главный экран для лучшего игрового опыта в полноэкранном режиме",
     "install": "Установить",
     "later": "Позже",
-    "installInstructions": "Для установки приложения:\\n\\nChrome/Edge: Меню → Установить приложение\\nSafari: Поделиться → На экран \"Домой\"\\nFirefox: Меню → Установить"
+    "installInstructions": "Для установки приложения:\n\nChrome/Edge: Меню → Установить приложение\nSafari: Поделиться → На экран \"Домой\"\nFirefox: Меню → Установить"
   },
   "ui": {
     "close": "Закрыть",
