--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -17,7 +17,11 @@
     "share": "Поделиться игрой",
     "inviteLink": "Ссылка для приглашения",
     "copyLink": "Скопировать ссылку",
-    "linkCopied": "Ссылка скопирована!"
+    "linkCopied": "Ссылка скопирована!",
+    "notification": {
+      "title": "Морской бой по‑физтеховски",
+      "yourTurn": "Ваш ход!"
+    }
   },
   "stages": {
     "place": "Расставьте ваши корабли",
