--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -176,5 +176,23 @@
     "Tr": "masculine",
     "Unknown": "masculine",
     "Sinking": "masculine"
+  },
+  "placement": {
+    "title": "Сохраненные расстановки",
+    "save": "Сохранить текущую",
+    "load": "Загрузить",
+    "delete": "Удалить",
+    "rename": "Переименовать",
+    "clearAll": "Очистить все",
+    "cancel": "Отмена",
+    "saveBtn": "Сохранить",
+    "enterName": "Введите название расстановки...",
+    "noSavedPlacements": "Нет сохраненных расстановок",
+    "saveHint": "Сохраните текущую расстановку кораблей для повторного использования",
+    "confirmDelete": "Вы уверены, что хотите удалить эту расстановку?",
+    "confirmClearAll": "Вы уверены, что хотите удалить все сохраненные расстановки?",
+    "loadError": "Не удалось загрузить расстановку. Возможно, она не совместима с текущей конфигурацией игры.",
+    "created": "Создана",
+    "used": "Использована"
   }
 }
