add attack autoskip and small changes

--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -123,7 +123,8 @@
     "confirmReady": "🎯 Точно готов?",
     "copyInviteLink": "🔗 Копировать ссылку",
     "linkCopied": "✅ Ссылка скопирована!",
-    "skipTurn": "⏭ Пропустить ход",
+    "skipTurn": "⏭ Пропустить атаку",
+    "pressSpace": "Нажмите Пробел",
     "emptySquare": "Пустая клетка",
     "cancel": "Отмена",
     "apply": "Применить",
