--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -123,7 +123,8 @@
     "confirmReady": "🎯 Are you sure?",
     "copyInviteLink": "🔗 Copy Invite Link",
     "linkCopied": "✅ Link Copied!",
-    "skipTurn": "⏭ Skip Turn",
+    "skipTurn": "⏭ Skip Attack",
+    "pressSpace": "Press Space",
     "emptySquare": "Empty square",
     "cancel": "Cancel",
     "apply": "Apply",
