--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -14,6 +14,7 @@
     "gameOver": "Игра окончена",
     "victory": "Победа!",
     "defeat": "Поражение!",
+    "draw": "Ничья",
     "share": "Поделиться игрой",
     "inviteLink": "Ссылка для приглашения",
     "copyLink": "Скопировать ссылку",
