--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -14,6 +14,7 @@
     "gameOver": "Game over",
     "victory": "Victory!",
     "defeat": "Defeat!",
+    "draw": "Draw",
     "share": "Share game",
     "inviteLink": "Invite link",
     "copyLink": "Copy link",
